# steering-vector-distillation

./: .gitignore  README.md  install.sh  pyproject.toml
src/subliminal/: dataset.py  eas.py  eval.py  eval_prompts.py  eval_steered.py  extract_student.py  extract_teacher.py  fetch.py  filter.py  generate.py  generate_steered.py  judge.py  steering_utils.py  train.py  vectors.py
src/subliminal/cross_model/: loss.py  run.py
src/subliminal/optimizer_ablation/: extract_adam_scales.py  grad_alignment.py  optimizers.py  rotated_lora.py  train.py
src/subliminal/paraphrasing/: README.md  eval.py  eval_logp.py  eval_teacher.py  filter_judge.py  filter_string.py  generate.py  paraphrase.py  prompts.py  sft_train.py  utils.py
src/subliminal/paraphrasing/steering/: extract_vectors.py  paraphrase_steered.py  prompts.py  steer.py
src/subliminal/steering_vector_distillation_traits/: behavioral_eval_autorater.py  eval_prompts.py  generate_responses.py
src/subliminal/zoo/: __init__.py  aggregate.py  animals.py  base_preferences.py  judge_prompts.py  sl_pipeline.py  steering_sweep.py
